[package]
name = "pong-game"
version = "0.1.0"
edition = "2021"
authors = ["javaLux"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
rand = "0.9.1"
tetra = "0.8.0"

[build-dependencies]
winres = "0.1.12"
